1 - fixed menus higlight on hover 2 - Small filter menu on small screens is optimized and has basic functionality working

--- a/breakpoints.css
+++ b/breakpoints.css
@@ -42,7 +42,7 @@
  
    
 
-    .sm-filter-overlay .inventory-sidebar .input-filter input {
+    .sm-screen-filter-modal .inventory-sidebar .input-filter input {
    
         background-color: var(--main-grey-5);
        
